Ensure group ID is different for devices which are not associated.

Before this CL, devices with the same ID (such as the default device) had the same group ID, even if they were on different physical devices.

BUG=639305

Review-Url: https://codereview.chromium.org/2263583002
Cr-Commit-Position: refs/heads/master@{#413166}

Former-commit-id: 44d1e9f9193762d3c31513c46f0cf75523aba6be